# vga_gen

./: .gitignore  CMakeLists.txt  README.md  main.cpp
firmware/circuits/: 74hc595.cpp  74hc595.hpp
firmware/hal/: multicore.cpp  multicore.hpp
firmware/scripts/: doxygen.sh
hardware/: .gitignore  fp-info-cache  vgagenerator.kicad_pcb  vgagenerator.kicad_prl  vgagenerator.kicad_pro  vgagenerator.kicad_sch
